--- a/GUI/GUI/MVVM/View/ConvertView.xaml
+++ b/GUI/GUI/MVVM/View/ConvertView.xaml
@@ -24,76 +24,58 @@
 
         <StackPanel Orientation="Horizontal"
                     Margin="0,0,0,10">
+            <TextBlock Text="Choose a photo"
+                       Foreground="White"
+                       FontSize="20"
+                       VerticalAlignment="Center"
+                       FontFamily="/Fonts/#Poppins"/>
+
             <Button Background="Transparent"
                     BorderBrush="Transparent"
-                    Command="{Binding ChoosePhoto}">
-                <Border Width="400"
-                        Height="100">
-                    <Border.Background>
-                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
-                            <GradientStop Color="#5bc3ff" Offset="0.0"/>
-                            <GradientStop Color="#3aa0ff" Offset="1"/>
-                        </LinearGradientBrush>
-                    </Border.Background>
-
+                    Command="{Binding ChoosePhoto}"
+                    Margin="10,0,0,0" Height="55">
+                <Border Width="50"
+                        Height="50">
                     <Border.Clip>
                         <RectangleGeometry RadiusX="10"
-                                       RadiusY="10"
-                                       Rect="0,0,400,100"/>
+                                           RadiusY="10"
+                                           Rect="0,0,50,50"/>
                     </Border.Clip>
                     <Grid>
-                        <StackPanel>
-                            <TextBlock Text="Choose a photo"
-                                   Foreground="White"
-                                   FontSize="28"
-                                   FontFamily="/Fonts/#Poppins"
-                                   Margin="85,55,0,100"/>
-                        </StackPanel>
                         <Image Width="50"
-                           Height="50"
-                           Source="/Images/imagen.png"
-                           HorizontalAlignment="Right"
-                           VerticalAlignment="Bottom"
-                           Margin="0,0,165,40">
+                               Height="50"
+                               Source="/Images/imagen.png"
+                               HorizontalAlignment="Right"
+                               VerticalAlignment="Bottom">
                         </Image>
                     </Grid>
                 </Border>
-
             </Button>
 
-            <Button BorderBrush="Transparent"
-                    Background="Transparent"
-                    Width="200"
-                    Height="100"
-                    Margin="45,0,0,0"
-                    Command="{Binding ChooseFolder}">
-                <Border 
-                    CornerRadius="10">
-                    <Border.Background>
-                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
-                            <GradientStop Color="#4eff91" Offset="0.0"/>
-                            <GradientStop Color="#166646" Offset="1"/>
-                        </LinearGradientBrush>
-                    </Border.Background>
+            <TextBlock Text="Select your folder"
+                       Foreground="White"
+                       FontSize="20"
+                       VerticalAlignment="Center"
+                       FontFamily="/Fonts/#Poppins"
+                       Margin="50,0,0,0"/>
+
+            <Button Background="Transparent"
+                    BorderBrush="Transparent"
+                    Command="{Binding ChooseFolder}"
+                    Margin="10,0,0,0" Height="55">
+                <Border Width="50"
+                        Height="50">
                     <Border.Clip>
                         <RectangleGeometry RadiusX="10"
-                                       RadiusY="10"
-                                       Rect="0,0,400,200"/>
+                                           RadiusY="10"
+                                           Rect="0,0,50,50"/>
                     </Border.Clip>
                     <Grid>
-                        <StackPanel>
-                            <TextBlock Text="Select your folder"
-                                   Foreground="White"
-                                   FontSize="18"
-                                   Margin="20,65,10,0"
-                                   FontFamily="/Fonts/#Poppins"/>
-                        </StackPanel>
                         <Image Width="50"
-                           Height="50"
-                           Source="/Images/folder.png"
-                           HorizontalAlignment="Right"
-                           VerticalAlignment="Bottom"
-                           Margin="0,0,65,40">
+                               Height="50"
+                               Source="/Images/folder.png"
+                               HorizontalAlignment="Right"
+                               VerticalAlignment="Bottom">
                         </Image>
                     </Grid>
                 </Border>
