--- a/GUI/GUI/App.xaml
+++ b/GUI/GUI/App.xaml
@@ -20,6 +20,10 @@
             <DataTemplate DataType="{x:Type viewModel:HistogramViewModel}">
                 <view:HistogramView/>
             </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ThresholdViewModel}">
+                <view:ThresholdView/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
