Se agrego una opcion para LBP

--- a/GUI/GUI/App.xaml
+++ b/GUI/GUI/App.xaml
@@ -24,6 +24,10 @@
             <DataTemplate DataType="{x:Type viewModel:ThresholdViewModel}">
                 <view:ThresholdView/>
             </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:LBPViewModel}">
+                <view:LBPView/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
